--- a/slippy-kerryb.css
+++ b/slippy-kerryb.css
@@ -70,10 +70,11 @@ h1 {
 }
 
 h2 {
+  text-align: center;
   margin-bottom: .25em;
   font-family: 'HelveticaNeue-CondensedBlack', 'Helvetica Neue Condensed Black', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
-  font-size: 1.8em;
+  font-size: 2.5em;
 }
 
 p, ul, ol {
