--- a/slippy-kerryb.css
+++ b/slippy-kerryb.css
@@ -92,6 +92,7 @@ p {
 }
 
 .comparison .left {
+  width: 45%;
   position: absolute;
   left: 0;
 }
@@ -103,6 +104,7 @@ p {
 }
 
 .comparison .right {
+  width: 45%;
   position: absolute;
   right: 0;
 }
