--- a/slippy-kerryb.css
+++ b/slippy-kerryb.css
@@ -82,8 +82,8 @@ pre {
 }
 
 p, ul, ol {
-  font-family: 'HelveticaNeue-CondensedBold', 'Helvetica Neue Condensed Bold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 400;
+  font-family: 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: normal;
   font-size: 1.8em;
 }
 
