Add licencing info

--- a/slippy-0.9.0.css
+++ b/slippy-0.9.0.css
@@ -3,6 +3,11 @@
  * Copyright (C) 2010, Jordi Boggiano
  * http://seld.be/ - j.boggiano@seld.be
  *
+ * Customisations to this theme by Kerry Buckley
+ * http://kerrybuckley.org
+ * @kerryb
+ * released under same licence terms.
+ *
  * Licensed under the new BSD License
  * See the LICENSE file for details
  */
